--- a/searchResults.css
+++ b/searchResults.css
@@ -38,10 +38,6 @@ body {
 }
 
 /* Nav */
-main {
-  margin: 2em 5em 5em 5em;
-}
-
 input[type="text"],
 select {
   width: 30%;
@@ -53,7 +49,17 @@ select {
   box-sizing: border-box;
 }
 
+#searchBar {
+  margin-bottom: 2em;
+}
+
+/* Sidebar Nav */
+
 /* Main */
+main {
+  margin: 2em 5em 5em 5em;
+}
+
 .card {
   margin: 1em 0 1em 0;
 }
@@ -84,10 +90,13 @@ span {
   background: #788e9e;
   border-radius: 50%;
   border: none;
-  margin-right: 1em;
   -webkit-box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.75);
   box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.75);
+}
+
+footer button:not(:last-child) {
+  margin-right: 1em;
 }
 
 .circleButton:active {
