--- a/about.css
+++ b/about.css
@@ -25,3 +25,80 @@ img {
   vertical-align: baseline;
   border: 0;
 }
+
+header {
+  text-align: center;
+  margin: 1em;
+  color: #FEFEFE;
+}
+
+body {
+  /* overflow-y: hidden; */
+  overflow-x: hidden;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #7f5a83;
+  background-image: linear-gradient(135deg, #7f5a83 0%, #0d324d 74%);
+}
+
+main {
+  padding: 1em;
+  color: #FEFEFE;
+}
+
+#crave-desc {
+  padding-right: 2em;
+  padding-left: 2em;
+}
+
+#dev-desc{
+  text-align: center;
+  margin-top: 3em;
+}
+
+.dev-card {
+  margin: 2em 2em;
+  width: 300px;
+  display: inline-block;
+  background-color: #0d324d;
+  border: solid;
+  border-color: #7f5a83;
+}
+
+.dev-card img {
+  width: 80px;
+  padding: 5px;
+  height: 100%;
+  float: left;
+}
+
+.dev-card h3 {
+  font-size: 20px;
+  float: left;
+}
+
+/* Footer */
+.circleButton {
+  width: 50px;
+  height: 50px;
+  background: #788e9e;
+  border-radius: 50%;
+  border: none;
+  -webkit-box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.75);
+  margin-left: 1em;
+}
+
+.circleButton:active {
+  transform: translateY(4px);
+}
+
+.circleButton:focus {
+  outline: none;
+}
+
+footer {
+  display: inline-block;
+}
