--- a/home.css
+++ b/home.css
@@ -1,85 +1,50 @@
-<!DOCTYPE html>
+body {
 
-<html lang="en">
+    font-family: "Open Sans", Verdana, Arial, sans-serif;
+    font-size: 100%;
+    background-color: #000000;
 
-<head>
+}
 
-    <meta charset="UTF-8">
+.btn {
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    background:rgba(50, 50, 50, 0.2);
+    color: white;
 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+}
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+div.shadow {
 
-        crossorigin="anonymous">
+    position:absolute;
+    max-width:45%;
+    max-height:45%;
+    top:50%;
+    left:50%;
+    overflow:visible;
 
-    <link rel="stylesheet" href="home.css">
+}
 
-</head>
+img.logo {
 
-<div class="shadow"><img class="logo" src="https://i.ibb.co/mTyQRZQ/LogoOpt.png" alt="Crave Logo" /></div>
+    position:relative;
+    max-width:100%;
+    max-height:100%;
+    margin-top:-50%;
+    margin-left:-50%;
 
-<div class="search_bar">
-  
-            <form class="form-inline">
+}
 
-              <input class="form-control" type="search" placeholder="What's your crave?" aria-label="Search">
+.search_bar {
 
-              <button class="btn btn-outline-default search" type="submit">Search</button>
+    position:absolute;  
+    left:43%;
+    top:45%;
 
-            </form>
+}
 
-</div>    
+.footer {
 
-<footer class="footer fotter-light bg-light fixed-bottom">
+    color: black;
+    text-align: right;
 
-<section>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-        <a class="navbar-brand" href="#"></a>
-
-            <ul class="navbar-nav">
-
-                <li class="nav-item active">
-
-                    <a class="nav-link" href="#">Home
-
-                        <span class="sr-only">(current)</span>
-
-                    </a>
-
-                </li>
-
-                <li class="nav-item">
-
-                    <a class="nav-link" href="#">Favorites</a>
-
-                </li>
-
-                <li class="nav-item">
-
-                    <a class="nav-link" href="about.html">About</a>
-
-                </li>
-
-            </ul>
-
-    </nav>
-
-<section>
-
-        <span class="footer-textr justify-content-center">
-
-          Copyright 2019 &nbsp;
-
-        </span>
-
-</footer>
-
-
-</body>
-
-
-</html
+}
