--- a/about.css
+++ b/about.css
@@ -28,8 +28,46 @@ img {
 
 header {
   text-align: center;
-  margin: 1em;
+  width: 100%;
   color: #FEFEFE;
+  background-color: black;
+  text-transform: uppercase;
+  padding: 1em;
+}
+
+header h1 {
+  font-weight: bold;
+  font-style: italic;
+}
+
+#view {
+  width: 100%;
+  height: 50em;
+}
+
+#view-image {
+  background-image: url("boston.jpg");
+  opacity: .5;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#crave-title {
+  color: brown;
+  font-weight: bold;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  padding: 20px;
+  width: 100%;
+  text-transform: uppercase;
+  font-style: italic;
+  text-align: center;
+  font-size: 10em;
 }
 
 body {
@@ -49,8 +87,10 @@ main {
 
 /* Crave Info */
 #crave-desc {
-  padding-right: 2em;
-  padding-left: 2em;
+  text-align: center;
+  padding-right: 5em;
+  padding-left: 5em;
+  font-size: 2em;
 }
 
 /* Developer Info */
