--- a/old-stuff/searchResults.css
+++ b/old-stuff/searchResults.css
@@ -38,11 +38,10 @@ body {
 }
 
 /* Nav */
-input[type="text"],
-select {
+input[type="text"], select {
   width: 30%;
+  height: 30px;
   padding: 12px 20px;
-  margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
