--- a/old-stuff/home.css
+++ b/old-stuff/home.css
@@ -2,7 +2,13 @@ body {
 
     font-family: "Open Sans", Verdana, Arial, sans-serif;
     font-size: 100%;
-    background-color: #000000;
+    overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-color: #7f5a83;
+    background-image: linear-gradient(135deg, #7f5a83 0%, #0d324d 74%);
 
 }
 
@@ -13,25 +19,16 @@ body {
 
 }
 
-div.shadow {
+#logo {
 
-    position:absolute;
-    max-width:45%;
-    max-height:45%;
-    top:50%;
-    left:50%;
-    overflow:visible;
-
-}
-
-img.logo {
-
-    position:relative;
-    max-width:100%;
-    max-height:100%;
-    margin-top:-50%;
-    margin-left:-50%;
-
+    background-image: url("LogoOpt.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 500px;
+    height: 250px;
+    top: 50%;
+    left: 50%;
 }
 
 .search_bar {
