--- a/old-stuff/about.css
+++ b/old-stuff/about.css
@@ -58,7 +58,7 @@ header h1 {
 
 #crave-title {
   color: brown;
-  font-weight: bold;
+  font-weight: bolder;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -156,6 +156,7 @@ footer {
   display: inline-block;
 }
 
+/* Responsive Rules */
 @media (max-width: 1500px) {
   #crave-title {
     font-size: 5em;
