--- a/components/about.html
+++ b/components/about.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="dev-card">
-                    <img src="dev_default.png">
+                    <img src="about_dp.jpg">
                     <h3>Deni Pasholli</h3>
                 </div>
             </div>
