--- a/components/searchResults.html
+++ b/components/searchResults.html
@@ -368,7 +368,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <img src="/images/flowers.jpg" alt="image" class="img-fluid">
+          <!-- <img src="/images/flowers.jpg" alt="image" class="img-fluid"> -->
           <p>&#128970; &#128970; &#128970; &#128970; &#128970; $ $ $ $ $</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum pharetra finibus. Nullam placerat
             vehicula neque, non dapibus velit pharetra at. Mauris pulvinar eleifend pellentesque. Vivamus interdum
@@ -386,6 +386,7 @@
       </div>
     </div>
   </div>
+  <button onClick="handleClick()">I hate thai nguyen</button>
 
 
   <footer>
@@ -401,6 +402,10 @@
     </div>
   </footer>
 
+   
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -410,6 +415,8 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="searchResults.js"></script>
+  <script src="main.js"></script>
+  
 
 </body>
 
