--- a/components/home.html
+++ b/components/home.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Boston Crave</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="home.css" />
+  </head>
 
-<head>
-	<title>Boston Crave</title>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-     <link rel="stylesheet" href="home.css">
-</head>
-
-<body>
-     <section id="home" background-ratio="0.5">
-          <div class="overlay"></div>
-          <div class="container">
-               <div class="row">
-                    <div class="col-md-offset-3 col-md-6 col-sm-12">
-                         <img src="LogoOpt.png" class="img-responsive" alt="Crave Logo" height="800" width="600">
-                         <div class="home-info">
-                              <form action="searchResults.html" method="get" class="online-form">
-                                   <input type="text" name="text" class="form-control" placeholder="What's Your Crave?" required="">
-                                   <button type="submit" class="form-control">Search</button>
-                              </form>
-                         </div>
-                    </div>
-               </div>
+  <body>
+    <section id="home" background-ratio="0.5">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-offset-3 col-md-6 col-sm-12">
+            <img
+              src="LogoOpt.png"
+              class="img-responsive"
+              alt="Crave Logo"
+              height="800"
+              width="600"
+            />
+            <div class="home-info">
+              <form
+                action="searchResults.html"
+                method="get"
+                class="online-form"
+              >
+                <input
+                  type="text"
+                  name="text"
+                  class="form-control"
+                  placeholder="What's Your Crave?"
+                  required=""
+                />
+                <button
+                  type="submit"
+                  class="form-control"
+                  onClick="handleClick()"
+                >
+                  Search
+                </button>
+              </form>
+            </div>
           </div>
-     </section>
-</body>
+        </div>
+      </div>
+    </section>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script src="main.js"></script>
+  </body>
 </html>
