--- a/components/searchResults.html
+++ b/components/searchResults.html
@@ -90,9 +90,8 @@
           <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom myBtn style="
             width: 5rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
+              <h5 id="card-title1">Card title</h5>
+              <p id="card-location1">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
@@ -107,9 +106,8 @@
           <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
             5rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
+              <h5 id="card-title2">Card title</h5>
+              <p id="card-location2">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
@@ -124,63 +122,8 @@
           <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
             5rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-      </div>
-      <!--  -->
-      <div class="row">
-        <div class="col-lg">
-          <!--  -->
-          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
-            5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-        <div class="col-lg">
-          <!--  -->
-          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
-            5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-        <div class="col-lg">
-          <!--  -->
-          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
-            5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
+              <h5 id="card-title3">Card title</h5>
+              <p id="card-location3">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
@@ -198,9 +141,8 @@
           <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
             5rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
+              <h5 id="card-title4">Card title</h5>
+              <p id="card-location4">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
@@ -215,9 +157,8 @@
           <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
             5rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
+              <h5 id="card-title5">Card title</h5>
+              <p id="card-location5">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
@@ -232,63 +173,8 @@
           <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
             5rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-      </div>
-      <!--  -->
-      <div class="row">
-        <div class="col-lg">
-          <!--  -->
-          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
-            5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-        <div class="col-lg">
-          <!--  -->
-          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
-            5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-          </div>
-          <!--  -->
-        </div>
-        <div class="col-lg">
-          <!--  -->
-          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
-            5rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
+              <h5 id="card-title6">Card title</h5>
+              <p id="card-location6">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
@@ -306,9 +192,8 @@
           <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
             5rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
+              <h5 id="card-title7">Card title</h5>
+              <p id="card-location7">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
@@ -323,9 +208,8 @@
           <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
             5rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
+              <h5 id="card-title8">Card title</h5>
+              <p id="card-location8">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
@@ -340,9 +224,110 @@
           <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
             5rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
-              <p class="card-text">
+              <h5 id="card-title9">Card title</h5>
+              <p id="card-location9">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+      </div>
+      <!--  -->
+      <div class="row">
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 id="card-title10">Card title</h5>
+              <p id="card-location10">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 id="card-title11">Card title</h5>
+              <p id="card-location11">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 id="card-title12">Card title</h5>
+              <p id="card-location12">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+      </div>
+      <!--  -->
+      <div class="row">
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 id="card-title13">Card title</h5>
+              <p id="card-location13">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 id="card-title14">Card title</h5>
+              <p id="card-location14">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+          <!--  -->
+        </div>
+        <div class="col-lg">
+          <!--  -->
+          <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom style=" width:
+            5rem;">
+            <div class="card-body">
+              <h5 id="card-title15">Card title</h5>
+              <p id="card-location15">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
