--- a/components/searchResults.html
+++ b/components/searchResults.html
@@ -29,7 +29,7 @@
           </div>
           <div class="col-lg text-center">
             <span>Rating:</span><br />
-            <select class="drop">
+            <select class="drop" >
               <option value="1">&#128970;</option>
               <option value="2">&#128970;&#128970;</option>
               <option value="3">&#128970;&#128970;&#128970;</option>
@@ -61,14 +61,12 @@
           <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom myBtn style="
             width: 5rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2">Card subtitle</h6>
+              <h5 class="card-title">Lolita Cocina & Tequila Bar Fort Point</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                  (617) 819-8226
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a href="#" class="card-link">Restaraunt Link</a>
+              <a href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -88,15 +86,15 @@
         <div class="col-lg">
           <!--  -->
           <div data-toggle="modal" data-target="#exampleModal" class="card text-center mx-auto bg-custom myBtn style="
-            width: 5rem;">
+            width: 5rem;"> 
             <div class="card-body">
               <h5 id="card-title1">Card title</h5>
               <p id="card-location1">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url1" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map1" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -111,8 +109,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url2" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map2" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -127,8 +125,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url3" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map3" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -146,8 +144,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url4" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map4" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -162,8 +160,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url5" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map5" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -178,8 +176,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url6" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map6" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -197,8 +195,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url7" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map7" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -213,8 +211,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url8" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map8" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -229,8 +227,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url9" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map9" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -248,8 +246,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url10" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map10" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -264,8 +262,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url11" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map11" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -280,8 +278,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url12" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map12" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -299,8 +297,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url13" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map13" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -315,8 +313,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url14" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map14" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -331,8 +329,8 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <a  target="_blank" id="url15" href="#" class="card-link">Restaraunt Link</a>
+              <a target="_blank" id="map15" href="#" class="card-link">Google Maps</a>
             </div>
           </div>
           <!--  -->
@@ -347,31 +345,23 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Lolita Cocina & Tequila Bar Fort Point</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
           <!-- <img src="/images/flowers.jpg" alt="image" class="img-fluid"> -->
-          <p>&#128970; &#128970; &#128970; &#128970; &#128970; $ $ $ $ $</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum pharetra finibus. Nullam placerat
-            vehicula neque, non dapibus velit pharetra at. Mauris pulvinar eleifend pellentesque. Vivamus interdum
-            semper ante a efficitur. Aenean venenatis eget sem non ullamcorper. Quisque finibus lacus justo, et
-            tristique turpis ullamcorper et. Fusce eget massa eget lorem condimentum lobortis. Fusce vehicula ex ac eros
-            hendrerit, pharetra eleifend sem iaculis. Vestibulum a consectetur sem. Proin condimentum pulvinar ante, sed
-            dignissim enim laoreet in. Donec accumsan pretium ligula in lobortis. Mauris hendrerit lectus et massa
-            porttitor rutrum. Aliquam vulputate laoreet libero, sed vestibulum elit eleifend ac. Fusce vel iaculis
-            metus.</p>
+          <p>&#128970; &#128970; &#128970; &#128970; $ $</p>
+          <p>Vibrant, trendy lounge offering Mexican-inspired eats & a lengthy tequila list amid Gothic decor.</p>
         </div>
         <div class="modal-footer">
-          <a href="https://google.com" target="_blank">Visit Google</a>
-          <a href="https://google.com" target="_blank">Visit Google</a>
+          <a href="https://google.com" target="_blank">Visit site</a>
+          <a href="https://google.com" target="_blank">Google Maps</a>
         </div>
       </div>
     </div>
   </div>
-  <button onClick="handleClick()">I hate thai nguyen</button>
 
 
   <footer>
@@ -382,8 +372,8 @@
     </div>
 
     <div class="rightdiv">
-      <a href="http://google.com" class="gh">Home</a>
-      <a href="http://google.com" class="gh">Home</a>
+      <a href="http://google.com" class="gh">Prev</a>
+      <a href="http://google.com" class="gh">Next</a>
     </div>
   </footer>
 
