--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
-.button__container {
-  margin-top: 200px;
-  text-align: center;
+/* Global */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.4;
+}
+
+/* Main */
 .button {
   background-color: green;
   border: none;
