--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,25 @@ main {
   box-shadow: -1px 9px 40px -12px rgba(0, 0, 0, 0.75);
 }
 
+.fav-star {
+  cursor: pointer;
+  background-image: url(https://i.ibb.co/xCKr5pR/empty-star.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin: auto;
+  text-align: center;
+  display: block;
+  width: 29px;
+  height: 29px;
+  margin-top: 17px;
+}
+.fav-star:hover {
+  background-image: url(https://i.ibb.co/Jxd9MjP/full-star.png);
+}
+.fav-star-filled {
+  background-image: url(https://i.ibb.co/Jxd9MjP/full-star.png);
+}
+
 span {
   color: #fff;
   font-size: 1.5em;
