--- a/src/css/about.css
+++ b/src/css/about.css
@@ -41,7 +41,7 @@ header h1 {
 
 #view {
   width: 100%;
-  height: 50em;
+  height: 50vh;
   text-align: center;
   position: relative;
 }
@@ -101,6 +101,11 @@ hr {
 }
 
 /* Developer Info */
+
+#dev-title {
+  font-size: 3em;
+}
+
 #dev-desc{
   text-align: center;
   margin-top: 3em;
